<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workshops"
            android:title="@string/drawer_item_workshop" />
        <item
            android:id="@+id/nav_techvistara"
            android:title="@string/drawer_item_techvistara" />
        <item
            android:id="@+id/nav_otherEvents"
            android:title="@string/drawer_item_otherEvents" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/drawer_item_notifications" />
        <item
            android:id="@+id/nav_pconMembers"
            android:title="@string/drawer_item_pconMembers" />
        <item
            android:id="@+id/nav_aboutPcon"
            android:title="@string/drawer_item_aboutPcon" />
    </group>
</menu>
